--- a/src/lang/no.json
+++ b/src/lang/no.json
@@ -13,7 +13,7 @@
     "lagreNokkel": "Lagre nøkkel og generer QR",
     "qrKode": "QR-kode (scannes av gjester):",
     "fullUrl": "Full URL:",
-    "kopierQrLink": "Kopier QR-link"
+    "kopierQrLink": "Kopier QR-link",
     "temaInnstillinger": "Tema-innstillinger",
 "lagreTema": "Lagre tema",
 "visQrInnstillinger": "QR-innstillinger",
