--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -13,7 +13,7 @@
     "lagreNokkel": "Save key and generate QR",
     "qrKode": "QR Code (to be scanned by guests):",
     "fullUrl": "Full URL:",
-    "kopierQrLink": "Copy QR link"
+    "kopierQrLink": "Copy QR link",
     "temaInnstillinger": "Theme settings",
 "lagreTema": "Save theme",
 "visQrInnstillinger": "QR settings",
