--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,24 +1,33 @@
 {
-    "velkommen": "Welcome to the Cabin Book",
-    "skrivInnlegg": "Write a new entry:",
-    "navn": "Name (optional)",
-    "melding": "Write something nice...",
-    "leggTil": "Add entry",
-    "tidligereInnlegg": "Previous entries:",
-    "ingenInnlegg": "No entries yet. Be the first!",
-    "ikkeTilgang": "You do not have access to write entries.\nScan the valid QR code at the cabin.",
-    "laster": "Checking access...",
-    "adminTittel": "QR Code Generator for your Cabin Book",
-    "hytteNokkel": "Cabin key (secret code):",
-    "lagreNokkel": "Save key and generate QR",
-    "qrKode": "QR Code (to be scanned by guests):",
-    "fullUrl": "Full URL:",
-    "kopierQrLink": "Copy QR link",
-    "temaInnstillinger": "Theme settings",
-"lagreTema": "Save theme",
-"visQrInnstillinger": "QR settings",
-"skjulQrInnstillinger": "Hide QR settings",
-    "forhandsvisning": "Preview:",
-"forhandsvisningTekst": "This is how the cabin book will look with the selected theme.",
-"huskLagreTema": "Change made - remember to click 'Save theme' to store the change."
+  "velkommen": "Welcome to the Cabin Book",
+  "skrivInnlegg": "Write a new entry:",
+  "navn": "Name (optional)",
+  "melding": "Write something nice...",
+  "leggTil": "Add entry",
+  "tidligereInnlegg": "Previous entries:",
+  "ingenInnlegg": "No entries yet. Be the first!",
+  "ikkeTilgang": "You do not have access to write entries.\nScan the valid QR code at the cabin.",
+  "laster": "Checking access...",
+  "adminTittel": "QR Code Generator for your Cabin Book",
+  "hytteNokkel": "Cabin key (secret code):",
+  "lagreNokkel": "Save key and generate QR",
+  "qrKode": "QR Code (to be scanned by guests):",
+  "fullUrl": "Full URL:",
+  "kopierQrLink": "Copy QR link",
+  "bakgrunnsbilde": "Background image (URL):",
+  "bakgrunnsfarge": "Background color:",
+  "temaInnstillinger": "Theme settings",
+  "lagreTema": "Save theme",
+  "visQrInnstillinger": "QR settings",
+  "skjulQrInnstillinger": "Hide QR settings",
+  "forhandsvisning": "Preview:",
+  "forhandsvisningTekst": "This is how the cabin book will look with the selected theme.",
+  "huskLagreTema": "Change made - remember to click 'Save theme' to store the change.",
+  "klarTilOpplasting": "File selected - ready to upload.",
+  "velgFilFørOpplasting": "Please select a file first.",
+  "lasterOpp": "Uploading...",
+  "opplastingFerdig": "Image uploaded. Remember to save theme.",
+  "feilOpplasting": "Error uploading image",
+  "valgtFil": "Selected file",
+  "lastOppBilde": "Upload image"
 }
